syntax = "proto3";


package wallet;

service WalletService {
  rpc CreateWallet (CreateWalletRequest) returns (CreateWalletResponse);
}

message CreateWalletRequest {
  string mobile = 1;
}

message CreateWalletResponse {
  string message = 1;
  Wallet data = 2;
  int32 status = 3;
}

message Wallet {
  string id = 1;
  string mobile = 2;
  float balance = 3;
  string userId = 4;
  string currency = 5;
  string status = 6;
  int64 createdAt = 7;
  int64 updatedAt = 8;
}